# honeybee_cell_segmentation_pipeline

./: LICENSE  README.md  install.py
tools/annotation_tool/: README.md  pyproject.toml
tools/annotation_tool/data/: label_classes.json  label_classes_extended_version.json
tools/annotation_tool/src/: annotation_controller.py  annotation_model.py  annotation_viewer.py  data_loader.py  label_map.json  utils.py
tools/background_generator/: README.md  pyproject.toml
tools/background_generator/src/: main.py
tools/background_generator/src/background_generator/: background_img_generator.py  utils.py
tools/cell_finder/: README.md  pyproject.toml
tools/cell_finder/src/cell_finder/: cell_finder.py  hex_graph_builder.py  models.py  utils.py
tools/cell_finder/src/cell_finder/performance_validation/: performance_validation.py
tools/cell_finder/src/cell_finder/performance_validation/ground_truth/: 20240603_cam-2.json  20240613_cam-1.json  20240615_cam-3.json  20240722_cam-0.json
tools/frame_extractor/: README.md  pyproject.toml
tools/frame_extractor/src/: fe_utils.py  frame_extractor.py  global_video_processor.py  main.py
tools/frame_extractor/src/test/: test_frame_extractor.py
tools/mask_writer/: README.md  pyproject.toml
tools/mask_writer/src/: mask_utils.py  mask_writer.py
