[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation-tool"
version = "0.1.0"
description = "Interactive annotation tool for honeybee comb images"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Daniel Sturm", email = "daniel.sturm@fu-berlin.de"}
]
dependencies = [
    "napari==0.6.2",
    "napari-console==0.1.3",
    "napari-plugin-engine==0.2.0",
    "napari-svg==0.2.1",
    "pyside6>=6.9.1,<7.0.0",
    "scikit-learn>=1.7.1,<2.0.0",
    "opencv-python",
    "numpy",
]

[project.scripts]
annotation-tool = "annotation_controller:main"

# For Poetry users (optional)
[tool.poetry]
name = "annotation-tool"
version = "0.1.0"
description = "Interactive annotation tool for honeybee comb images"
authors = ["Daniel Sturm <daniel.sturm@fu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
napari = "==0.6.2"
napari-console = "==0.1.3"
napari-plugin-engine = "==0.2.0"
napari-svg = "==0.2.1"
pyside6 = ">=6.9.1,<7.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
opencv-python = "*"
numpy = "*"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
